# Sequence3

./: CMakeLists.txt
include/sequence/: sequence.h
src/: console.cc  container.cc  sequence.cc
tests/: sequences_tests.cc
